# llm-iq-bench

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/: benchmarks.yaml  datasets.yaml  models.yaml
datasets/: README.md
datasets/knowledge/: fetch.py
datasets/reasoning/: fetch.py
docs/: ROADMAP.md  analysis_glm_full_v2.md  analysis_glm_local_20260719.md  architecture.md  devlog.md  methodology.md  mgsm_drift_investigation.md
docs/design/: ifeval.md  multi_round.md  multi_sample.md  reproducibility.md  tiers.md  web_datasets.md
plans/L0_smoke/: plan.yaml
plans/L1_screening/: plan.yaml
plans/L2_standard/: plan.yaml
plans/L3_deep/: plan.yaml
plans/aime_selfconsistency/: plan.yaml
plans/chinese/: plan.yaml
plans/coding_pass5/: plan.yaml
plans/coding_robust/: plan.yaml
plans/full/: plan.yaml
plans/glm_full_v2/: plan.yaml
plans/glm_local_real/: plan.yaml
reports/: README.md  comparison.md  summary_report.md  template.md
scripts/: _bg_run.py  compare_reports.py  download_datasets.py  gen_analysis_report.py  gen_multi_analysis.py  gen_summary_report.py  generate_report.py  run_benchmark.py  run_multi.py
skills/: README.md  agent-testing.md  coding-testing.md  instruction-following-testing.md  knowledge-testing.md  long-context-testing.md  reasoning-testing.md  safety-testing.md
tests/: _runner.py  test_composer.py  test_ifeval.py  test_multi_sample.py  test_normalize.py  test_reproducibility.py  test_smoke.py  test_suite_dynamic.py  test_tiers.py  test_variance.py  test_web_datasets.py
(+57 files in other folders)
