[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-iq-bench"
version = "0.1.0"
description = "大语言模型多维度能力评测框架"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0", "requests>=2.31", "tqdm>=4.66", "openai>=1.30", "datasets>=2.19", "pandas>=2.0", "jinja2>=3.1"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
llm-iq-bench = "llm_iq_bench.cli:main"
